// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages cap inner component renders normally when caps are present 1`] = `
<Fragment>
  <h4
    className="govuk-heading-m govuk-!-padding-bottom-4"
  >
    cappy cap
  </h4>
  <p
    className="govuk-body-s govuk-!-margin-bottom-2"
  >
    <span
      className="govuk-!-font-weight-bold"
    >
      Price:
    </span>
     
    2
  </p>
  <p
    className="govuk-body-s govuk-!-margin-bottom-2"
  >
    <span
      className="govuk-!-font-weight-bold"
    >
      Duration:
    </span>
     
    24hr
     
    hour
  </p>
</Fragment>
`;

exports[`pages view caps should render correctly on no cap expiry 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no cap expiry saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/selectCapExpiry"
        >
          Add cap expiry
        </a>
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <NoCapsCard />
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity and cap with duration less than 24 hour is  present 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="fareDayEnd"
          fareDayEnd="2323"
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <div
          className="card-row"
        >
          <CapCard
            capInfo={
              Object {
                "cap": Object {
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity and cap with more than one day duration is present 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="fareDayEnd"
          fareDayEnd="2323"
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <div
          className="card-row"
        >
          <CapCard
            capInfo={
              Object {
                "cap": Object {
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "capStart": Object {
                  "startDay": "friday",
                  "type": "fixedWeekdays",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity and rollingDays cap start is present 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="fareDayEnd"
          fareDayEnd="2323"
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <div
          className="card-row"
        >
          <CapCard
            capInfo={
              Object {
                "cap": Object {
                  "durationAmount": "1",
                  "durationUnits": "hour",
                  "name": "Cap 1",
                  "price": "2",
                },
                "capStart": Object {
                  "type": "rollingDays",
                },
                "id": 1,
              }
            }
            deleteActionHandler={[Function]}
            index={0}
            key="1"
          />
        </div>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity is 24 hr 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="24hr"
          fareDayEnd=""
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view caps should render correctly when cap validity is fare day end 1`] = `
<BaseLayout
  description="View and edit your caps."
  referer={null}
  showNavigation={true}
  title="Caps - Create Fares Data Service"
>
  <div>
    <ErrorSummary
      errors={Array []}
    />
  </div>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Caps
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define your different types of caps and when they expire.
      </p>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Cap expiry
        </h2>
        <CapExpiryCard
          capExpiry="fareDayEnd"
          fareDayEnd="2323"
        />
      </div>
      <div>
        <h2
          className="govuk-heading-l"
        >
          Caps
        </h2>
        <p
          className="govuk-body"
        >
          <em>
            You currently have no caps saved.
          </em>
        </p>
        <a
          className="govuk-button"
          data-module="govuk-button"
          href="/createCaps"
        >
          Add caps
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;
